docs/theme/mlflow/static/css/custom.css
/* ... */
a.btn, a.btn:hover, a.btn:focus, a.btn:active {
  text-decoration: none !important;
}

.btn .db-icon {
  vertical-align: baseline;
  font-size: .6em;
  font-weight: bold;
  position: relative;
  top: -0.1em;
}

.btn-neutral, .btn-neutral:visited {
  color: #FFF !important;
  background: #1CB1C2 !important;
  border-color: #1CB1C2 !important;
}
.btn-neutral:hover, .btn-neutral:active, .btn-neutral:focus {
  background: #1fc5d8 !important;
  border-color: #1fc5d8 !important;
}

/**
 * Footer section
 */

.rst-content footer {
  font-size: 13px;
  color: #888;
}

.rst-content footer a {
  color: #888;
  text-decoration: underline;
}

.rst-content footer p {
  margin-bottom: .75em;
}

.rst-content footer hr {
  margin-top: 100px;
}

@media screen and (max-width: 768px) {
  .rst-content footer hr {
    margin-top: 30px;
  }
}

/* Next/prev buttons */
.rst-footer-buttons {
  margin-top: 30px;
}

.rst-footer-buttons .btn {
  color: #1CB1C2 !important;
  background-color: transparent !important;
  padding-left: 0;
  padding-right: 0;
  text-align: center;
  width: 7em;
}
.rst-footer-buttons .btn:hover {
  color: #FFF !important;
  background: #1fc5d8 !important;
  border-color: #1fc5d8 !important;
}

.rst-footer-buttons .btn + .btn {
  margin-left: 1em;
}

@media screen and (max-width: 375px) {
  .rst-footer-buttons {
    display: flex;
  }

  .rst-footer-buttons .btn {
    flex: 1 1 50%;
  }
}

/**
 * Alert boxes
 */

.rst-content .admonition-title {
text-transform: capitalize;
  font-weight: 600;
  line-height: 1em;
  padding: .35em .5em;
}
.rst-content .admonition-title:before {
  content: " ";
  display: inline-block;
  margin-right: .4em;
  width: 1em;
  height: 1em;
  line-height: 1em;
  vertical-align: bottom;
  background-position: center;
  background-repeat: no-repeat;
  background-size: 1em;
  position: relative;
  top: -.1em;
}

.admonition.note {
  background-color: #DDF4F6;
}
.admonition.note .admonition-title {
  background-color: #1CB1C2;
}
.admonition.note .admonition-title:before {
  background-image: url("../icons/note-icon.svg");
  font-size: .9em;
}

.admonition.tip {
  background-color: #F5F7C8;
}
.admonition.tip .admonition-title {
  background-color: #C5CD18;
}
.admonition.tip .admonition-title:before {
  background-image: url("../icons/tip-icon.svg");
  font-size: .9em;
}

.admonition.warning {
  background-color: #FABEAD;
}
.admonition.warning .admonition-title {
  background-color: #F1582C;
}
.admonition.warning .admonition-title:before {
  background-image: url("../icons/warning-icon.svg");
  font-size: .9em;
}

.admonition.important {
  background-color: #FFEDCC;
}
.admonition.important .admonition-title {
  background-color: #F0B37E;
}
.admonition.important .admonition-title:before {
  background-image: url("../icons/important-icon.svg");
  font-size: .9em;
}

/* Tables in alert boxes */
.admonition table,
.rst-content .admonition table {
  border: 1px solid #e1e4e5 !important;
}

.rst-content .admonition table td,
.rst-content .admonition table th {
  border-color: #e1e4e5 !important;
}

/**
 * Code samples
 */

.code .highlight {
  position: relative;
  z-index: 1;
}

/* Copy to the clipboard */
.clippy {
  position: absolute;
  top: -1px;
  right: -1px;
  white-space: pre;
  font-size: 12px;
  background-color: #FFF;
  border: 1px solid #e1e4e5;
  padding: .25em .5em;
  cursor: pointer;
  text-align: center;
  z-index: 2;
}

.clippy img {
  width: 1em;
  margin-right: .5em;
}

.clippy:hover {
  background-color: #f3f3f3;
}

@keyframes flashClippy {
  0% {
    background-color: #FFF;
  }

  33% {
    background-color: #ffedcc;
  }

  66% {
    background-color: #FFF;
  }
}

.clippy + pre {
  position: relative;
  z-index: 1;
}
.clippy.copied + pre {
  animation: flashClippy 1s;
}

/**
 * Notebook embeds
 */

.embedded-notebook p {
  font-size: small;
  margin-bottom: 0px;
}

.embedded-notebook .embedded-notebook-container {
  margin: -2px -14px -2px -8px;
}

.embedded-notebook .embedded-notebook-container .loading-spinner,
.embedded-notebook iframe,
.embedded-notebook .embedded-notebook-container:before {
  transition: opacity .5s linear;
}

.embedded-notebook iframe {
  opacity: 0;
  border-style: none;
  border-width: 0px;
  transition-delay: .5s;
}

.embedded-notebook.loaded iframe {
  opacity: 1;
}

.embedded-notebook .embedded-notebook-container {
  position: relative;
}

.embedded-notebook .embedded-notebook-container .loading-spinner {
  position: absolute;
  top: 30px;
  left: 50%;
  font-size: 80px;
  margin-left: -.5em;
  z-index: -1;
}

.embedded-notebook .embedded-notebook-container:before {
  content: "Loading Notebook...";
  position: absolute;
  top: 130px; /* 30px (spinner's margin top) + 80px (spinner) + 20px */
  left: 50%;
  margin-left: -100px;
  width: 200px;
  text-align: center;
  font-size: 17px;
  z-index: -1;
}

.embedded-notebook.loaded .embedded-notebook-container .loading-spinner,
.embedded-notebook.loaded .embedded-notebook-container:before {
  opacity: 0;
  pointer-events: none;
}

/**
 * Breadcrumbs
 */

.wy-breadcrumbs {
  font-size: 15px !important;
  margin-bottom: 60px !important;
}
.wy-breadcrumbs li a {
  padding: 0;
}
.wy-breadcrumbs .db-icon {
  margin-left: .5em;
  margin-right: .5em;
  font-size: .6em;
  font-weight: bold;
  display: inline-block;
  margin-top: -.25em;
}

@media screen and (max-width: 375px) {
  .wy-breadcrumbs {
    display: none;
  }
}

@media screen and (max-width: 768px) {
  .wy-breadcrumbs {
    margin-bottom: 30px !important;
  }
}
/* ... */

